--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,15 @@ dependencies:
 
   flutter_riverpod: ^2.3.6
 
+  welltested_annotation: ^1.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  build_runner:
+  mockito:
 flutter:
 
   uses-material-design: true
